objects/CS_Snapshot_Metric__c.object
<CustomObject>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <formula>CASE( Type__c , 
&quot;WANstart Bundled&quot;, &quot;WANStart&quot;, 
&quot;WANstart Services&quot;, &quot;WANStart&quot;,
&quot;Technical support&quot;, &quot;Tech Support&quot;, 
&quot;Incoming Email&quot;, &quot;Tech Support&quot;, 
&quot;Customer Service&quot;, &quot;Tech Support&quot;, 
&quot;Engineering Support&quot;, &quot;Tech Support&quot;, 
&quot;Tech Support&quot;)</formula>
        <label>Case Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalated__c</fullName>
        <formula>Case(
Metric__c, &quot;Escalated - Tier 4&quot;, 1,
&quot;Pending Bug Fix&quot;, 1,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Escalated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hot__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Hot List Case</inlineHelpText>
        <label>Hot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Metric__c</fullName>
        <inlineHelpText>description of metric</inlineHelpText>
        <label>Status</label>
        <length>65</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <inlineHelpText>Severity</inlineHelpText>
        <label>Severity</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <inlineHelpText>Date of Snapshot run</inlineHelpText>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Case Type</inlineHelpText>
        <label>Type</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <label>CS Snapshot Metric</label>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>CS Snapshot Metric Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CS Snapshot Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>